--- a/api_tests/pom.xml
+++ b/api_tests/pom.xml
@@ -66,6 +66,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version> <!-- Atualizando para uma versão estável mais recente -->
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report-only</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <includes>
                         <include>**/ApiTests.java</include>
