--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -22,13 +22,37 @@ jobs:
           distribution: 'adopt'
 
       - name: Run API tests
+        id: run_tests
         run: |
           cd api_tests
-          mvn clean test
+          mvn clean test | tee mvn_output.log
 
-      - name: Upload Test Report
+      - name: Generate Allure Results
+        run: |
+          cd api_tests
+          allure generate allure-results --clean -o allure-report
+
+      - name: Upload Allure Report
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: api-test-report
-          path: api_tests/target/reports/surefire.html
+          path: api_tests/allure-report
+
+      - name: Summary of Test Results
+        run: |
+          echo "## Test Results Summary" >> summary.md
+          echo "" >> summary.md
+          echo "Tests run: ${{ steps.run_tests.outputs.tests }}" >> summary.md
+          echo "Failures: ${{ steps.run_tests.outputs.failures }}" >> summary.md
+          echo "Errors: ${{ steps.run_tests.outputs.errors }}" >> summary.md
+          echo "Skipped: ${{ steps.run_tests.outputs.skipped }}" >> summary.md
+          cat mvn_output.log >> summary.md
+          echo "Results can be found in the Allure Report." >> summary.md
+
+      - name: Upload Summary
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-summary
+          path: summary.md
