--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -23,14 +23,16 @@ jobs:
 
       - name: Install Allure
         run: |
-          sudo apt-get install -y wget unzip || true
+          sudo apt-get update
+          sudo apt-get install -y allure
 
       - name: Run API tests
         run: |
           cd api_tests
           mvn clean test
 
-      - name: Serve Allure Results
+      - name: Generate Allure Report
         run: |
           cd api_tests
-          allure serve allure-results
+          allure generate allure-results --clean
+          allure open allure-report
