--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -25,14 +25,17 @@ jobs:
           cd e2e_tests
           npm install
 
+      - name: Install Playwright Browsers
+        run: |
+          cd e2e_tests
+          npx playwright install
+
       - name: Run E2E tests
         run: |
           cd e2e_tests
           npx playwright test --headed --reporter=html
 
-      - name: Upload Test Report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: e2e-test-report
-          path: e2e_tests/playwright-report/**/*
+      - name: Show Playwright Report
+        run: |
+          cd e2e_tests
+          npx playwright show-report
