Atualiza o workflow para instalação do K6 com PPA correto

--- a/.github/workflows/load-tests.yml
+++ b/.github/workflows/load-tests.yml
@@ -1,29 +1,27 @@
-name: Run Load Tests with K6
+name: Teste de Carga com K6
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - master  # ou a branch que você está usando
 
 jobs:
-  load-tests:
+  load-test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out the repository
+      - name: Checar o código
         uses: actions/checkout@v2
 
-      - name: Update APT and install K6
+      - name: Instalar dependências
         run: |
           sudo apt-get update
           sudo apt-get install -y software-properties-common
-          sudo add-apt-repository ppa:grafana/k6
+          sudo add-apt-repository -y ppa:grafana/k6
           sudo apt-get update
           sudo apt-get install -y k6
 
-      - name: Run load tests
+      - name: Executar teste de carga
         run: |
           cd load_tests
           k6 run load_test.js
