--- a/.github/workflows/load-tests.yml
+++ b/.github/workflows/load-tests.yml
@@ -13,13 +13,19 @@ jobs:
       - name: Checar o código
         uses: actions/checkout@v2
 
-      - name: Instalar dependências
+      - name: Instalar K6
         run: |
-          sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository -y ppa:grafana/k6
-          sudo apt-get update
-          sudo apt-get install -y k6
+          # Baixar a versão mais recente do K6
+          wget https://github.com/grafana/k6/releases/latest/download/k6-linux-amd64.tar.gz
+          
+          # Extrair o arquivo
+          tar -xvzf k6-linux-amd64.tar.gz
+          
+          # Mover para o diretório de binários
+          sudo mv k6 /usr/local/bin/
+          
+          # Verificar a instalação
+          k6 version
 
       - name: Executar teste de carga
         run: |
