--- a/.github/workflows/load-tests.yml
+++ b/.github/workflows/load-tests.yml
@@ -20,13 +20,14 @@ jobs:
 
       - name: Instalar K6
         run: |
-          # Obter a versão mais recente do K6
-          LATEST=$(curl -s https://api.github.com/repos/grafana/k6/releases/latest | jq -r .tag_name)
-          echo "Baixando K6 versão: $LATEST"
+          # Definir uma versão específica do K6
+          VERSION="v0.50.0"  # Substitua por uma versão válida
+          
+          echo "Baixando K6 versão: $VERSION"
           
           # Baixar o K6
-          wget https://github.com/grafana/k6/releases/download/$LATEST/k6-linux-amd64.tar.gz
-
+          wget https://github.com/grafana/k6/releases/download/$VERSION/k6-linux-amd64.tar.gz
+          
           # Extrair o arquivo
           tar -xvzf k6-linux-amd64.tar.gz
           
