--- a/.github/workflows/load-tests.yml
+++ b/.github/workflows/load-tests.yml
@@ -13,9 +13,19 @@ jobs:
       - name: Checar o código
         uses: actions/checkout@v2
 
-      - name: Baixar e instalar o K6
+      - name: Baixar K6
         run: |
-          curl -sSL https://github.com/grafana/k6/releases/latest/download/k6-linux-amd64.tar.gz | tar -xz
+          K6_VERSION="0.54.0"  # Substitua pela versão desejada
+          curl -L -o k6.tar.gz https://github.com/grafana/k6/releases/download/v$K6_VERSION/k6-linux-amd64.tar.gz
+          # Verifica se o download foi bem-sucedido
+          if [[ ! -f k6.tar.gz ]]; then
+            echo "Erro ao baixar o K6"
+            exit 1
+          fi
+
+      - name: Extrair e instalar K6
+        run: |
+          tar -xzf k6.tar.gz
           sudo install k6 /usr/local/bin/
 
       - name: Executar teste de carga
