Baixando a última versão do K6

--- a/.github/workflows/load-tests.yml
+++ b/.github/workflows/load-tests.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Baixar K6
         run: |
-          K6_VERSION="0.54.0"  # Substitua pela versão desejada
-          curl -L -o k6.tar.gz https://github.com/grafana/k6/releases/download/v$K6_VERSION/k6-linux-amd64.tar.gz
+          echo "Baixando a última versão do K6..."
+          curl -sSL https://github.com/grafana/k6/releases/latest/download/k6-linux-amd64.tar.gz -o k6.tar.gz
           
           # Verifica se o download foi bem-sucedido
           if [[ ! -f k6.tar.gz ]]; then
