--- a/.github/workflows/load-tests.yml
+++ b/.github/workflows/load-tests.yml
@@ -16,13 +16,10 @@ jobs:
       - name: Instalar K6
         run: |
           echo "Instalando K6..."
-          curl -sSL https://github.com/grafana/k6/releases/latest/download/k6-linux-amd64.tar.gz | tar -xz
-          sudo mv k6 /usr/local/bin/
+          winget install k6 --source winget
 
-      - name: Executar teste de carga no K6 Cloud
+      - name: Executar teste de carga
         run: |
-          echo "Executando teste de carga com K6 Cloud..."
-          k6 cloud run --local-execution load_tests/script.js
-
-          # Se você quiser desativar o upload do arquivo de teste
-          # k6 cloud run --local-execution --no-archive-upload load_tests/script.js
+          echo "Navegando até a pasta de testes e executando o teste de carga..."
+          cd ~/Desktop/DURGA/Outsera/Outsera_Automation_Suite/load_tests
+          k6 run load_test.js
